crates/osp-core/tests/compile_fail/c16_resolution_application_literal.stderr
warning: unreachable expression
  --> tests/compile_fail/c16_resolution_application_literal.rs:10:16
   |
10 |       let _app = ResolutionApplication {
   |  ________________^
11 | |         candidate_id: ConceptNodeId("CodeEntityCandidate:X".into()),
12 | |         ..unimplemented!()
   | |           ---------------- any code following this expression is unreachable
13 | |     };
   | |_____^ unreachable expression
   |
   = note: `#[warn(unreachable_code)]` (part of `#[warn(unused)]`) on by default

error[E0451]: fields `candidate_id`, `basis`, `reason`, `session_id`, `operator` and `resolved_at` of struct `ResolutionApplication` are private
  --> tests/compile_fail/c16_resolution_application_literal.rs:11:9
   |
10 |     let _app = ResolutionApplication {
   |                --------------------- in this type
11 |         candidate_id: ConceptNodeId("CodeEntityCandidate:X".into()),
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ private field
12 |         ..unimplemented!()
   |           ^^^^^^^^^^^^^^^^ fields `basis`, `reason`, `session_id`, `operator` and `resolved_at` are private
